[package]
name = "bluetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["chrono"] }
regex = "1.5"
csv = "1.1"

rand = "0.8"
sha2 = "0.10"
typenum = "1.15"
aes = "0.8"
block-modes = "0.8"
cbc = "0.1.2"
base64 = "0.21"
hex = "0.4.3"
