[package]
name = "bluetracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["chrono"] }
regex = "1.5"
csv = "1.1"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4.3"
serde_yaml = "0.9.34"
